--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <nav>
         <ul class="site-nav list">
           <li>
-            <a href="/index.html" class="link">Студия</a>
+            <a href="./index.html" class="link">Студия</a>
           </li>
-          <li><a href="/portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
         <!-- ul>li*2>p+p швидке написання коду-->
