--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,8 @@
       <!--navigation-->
       <nav>
         <ul class="site-nav list">
-          <li><a href="/index.html" class="link">Студия</a></li>
-          <li><a href="/portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
         <!-- ul>li*2>p+p швидке написання коду-->
@@ -44,117 +44,128 @@
     </header>
     <!--main-->
     <main>
-      <!-- Навигация Портфолио -->
-      <h1 hidden>Навигация Портфолио</h1>
-      <ul class="list">
-        <li><button type="button" class="buttons">Все</button></li>
-        <li><button type="button" class="buttons">Веб-сайты</button></li>
-        <li><button type="button" class="buttons">Приложения</button></li>
-        <li><button type="button" class="buttons">Дизайн</button></li>
-        <li><button type="button" class="buttons">Маркетинг</button></li>
-      </ul>
-
-      <!-- Карточки -->
-      <ul class="list">
-        <li>
-          <a href="" class="cards">
-            <img
-              src="./img/card-1.jpg"
-              alt="Ноутбук с веб-сайтом"
-              width="370"
-              height="294"
-            />
-            <h2 class="cards">Технокряк</h2>
-            <p class="cards-content">Веб-сайт</p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="cards">
-            <img src="./img/card-2.jpg" alt="Постер" width="370" height="294" />
-            <h2 class="cards">Постер New Orlean vs Golden Star</h2>
-            <p class="cards-content">Дизайн</p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="cards">
-            <img
-              src="./img/card-3.jpg"
-              alt="Логотип ресторана"
-              width="370"
-              height="294"
-            />
-            <h2 class="cards">Ресторан Seafood</h2>
-            <p class="cards-content">Приложение</p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="cards">
-            <img
-              src="./img/card-4.jpg"
-              alt="Наушники"
-              width="370"
-              height="294"
-            />
-            <h2 class="cards">Проект Prime</h2>
-            <p class="cards-content">Маркетинг</p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="cards">
-            <img
-              src="./img/card-5.jpg"
-              alt="Две коробки"
-              width="370"
-              height="294"
-            />
-            <h2 class="cards">Проект Boxes</h2>
-            <p class="cards-content">Приложение</p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="cards">
-            <img
-              src="./img/card-6.jpg"
-              alt="Монитор с веб-сайтом"
-              width="370"
-              height="294"
-            />
-            <h2 class="cards">Inspiration has no Borders</h2>
-            <p class="cards-content">Веб-сайт</p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="cards">
-            <img
-              src="./img/card-7.jpg"
-              alt="Книга с рисунками"
-              width="370"
-              height="294"
-            />
-            <h2 class="cards">Издание Limited Edition</h2>
-            <p class="cards-content">Дизайн</p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="cards">
-            <img src="./img/card-8.jpg" alt="Бирка" width="370" height="294" />
-            <h2 class="cards">Проект LAB</h2>
-            <p class="cards-content">Маркетинг</p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="cards">
-            <img
-              src="./img/card-9.jpg"
-              alt="Ноутбук с приложением"
-              width="370"
-              height="294"
-            />
-            <h2 class="cards">Growing Business</h2>
-            <p class="cards-content">Приложение</p>
-          </a>
-        </li>
-      </ul>
+      <section>
+        <!-- Навигация Портфолио -->
+        <h1 hidden>Навигация Портфолио</h1>
+        <ul class="list">
+          <li><button type="button" class="buttons">Все</button></li>
+          <li><button type="button" class="buttons">Веб-сайты</button></li>
+          <li><button type="button" class="buttons">Приложения</button></li>
+          <li><button type="button" class="buttons">Дизайн</button></li>
+          <li><button type="button" class="buttons">Маркетинг</button></li>
+        </ul>
+        <!-- Карточки -->
+        <ul class="list">
+          <li>
+            <a href="" class="cards">
+              <img
+                src="./img/card-1.jpg"
+                alt="Ноутбук с веб-сайтом"
+                width="370"
+                height="294"
+              />
+              <h2 class="cards">Технокряк</h2>
+              <p class="cards-content">Веб-сайт</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="cards">
+              <img
+                src="./img/card-2.jpg"
+                alt="Постер"
+                width="370"
+                height="294"
+              />
+              <h2 class="cards">Постер New Orlean vs Golden Star</h2>
+              <p class="cards-content">Дизайн</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="cards">
+              <img
+                src="./img/card-3.jpg"
+                alt="Логотип ресторана"
+                width="370"
+                height="294"
+              />
+              <h2 class="cards">Ресторан Seafood</h2>
+              <p class="cards-content">Приложение</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="cards">
+              <img
+                src="./img/card-4.jpg"
+                alt="Наушники"
+                width="370"
+                height="294"
+              />
+              <h2 class="cards">Проект Prime</h2>
+              <p class="cards-content">Маркетинг</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="cards">
+              <img
+                src="./img/card-5.jpg"
+                alt="Две коробки"
+                width="370"
+                height="294"
+              />
+              <h2 class="cards">Проект Boxes</h2>
+              <p class="cards-content">Приложение</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="cards">
+              <img
+                src="./img/card-6.jpg"
+                alt="Монитор с веб-сайтом"
+                width="370"
+                height="294"
+              />
+              <h2 class="cards">Inspiration has no Borders</h2>
+              <p class="cards-content">Веб-сайт</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="cards">
+              <img
+                src="./img/card-7.jpg"
+                alt="Книга с рисунками"
+                width="370"
+                height="294"
+              />
+              <h2 class="cards">Издание Limited Edition</h2>
+              <p class="cards-content">Дизайн</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="cards">
+              <img
+                src="./img/card-8.jpg"
+                alt="Бирка"
+                width="370"
+                height="294"
+              />
+              <h2 class="cards">Проект LAB</h2>
+              <p class="cards-content">Маркетинг</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="cards">
+              <img
+                src="./img/card-9.jpg"
+                alt="Ноутбук с приложением"
+                width="370"
+                height="294"
+              />
+              <h2 class="cards">Growing Business</h2>
+              <p class="cards-content">Приложение</p>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <!--footer-->
