--- a/index.html
+++ b/index.html
@@ -11,38 +11,48 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <!--Шапка-->
-    <header class="page-header">
+    <header class="page-header container">
       <!--brand-name-header-->
       <a href="" class="brandname" lang="en"
         ><span class="brandname-one">Web</span>Studio</a
       >
       <!--navigation-->
-      <nav>
-        <ul class="site-nav list">
-          <li>
-            <a href="./index.html" class="link">Студия</a>
-          </li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
-        </ul>
-        <!-- ul>li*2>p+p швидке написання коду-->
-      </nav>
+      <div class="container">
+        <nav>
+          <ul class="site-nav list">
+            <li>
+              <a href="./index.html" class="link">Студия</a>
+            </li>
+            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+            <li><a href="" class="link">Контакты</a></li>
+          </ul>
+          <!-- ul>li*2>p+p швидке написання коду-->
+        </nav>
+      </div>
       <!--Contacts info-->
-      <ul class="contacts list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="contacts-nav"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="contacts-nav">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      <div class="container">
+        <ul class="contacts list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="contacts-nav"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="contacts-nav"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
     </header>
 
     <!--main-->
@@ -59,148 +69,155 @@
 
       <!--Чем мы занимаемся-->
       <section class="section">
-        <h2 hidden>Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
-            <h3 class="section-title">Внимание к деталям</h3>
-            <p class="section-content">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-title">Пунктуальность</h3>
-            <p class="section-content">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-title">Планирование</h3>
-            <p class="section-content">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-title">Современные технологии</h3>
-            <p class="section-content">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 hidden>Чем мы занимаемся</h2>
+          <ul class="list">
+            <li>
+              <h3 class="section-title">Внимание к деталям</h3>
+              <p class="section-content">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-title">Пунктуальность</h3>
+              <p class="section-content">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-title">Планирование</h3>
+              <p class="section-content">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-title">Современные технологии</h3>
+              <p class="section-content">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Чем мы занимаемся(photos)-->
       <section class="section">
-        <h2 class="section-heading">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./img/first-photo.jpg"
-              alt="Работа с кодом"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./img/second-photo.jpg"
-              alt="Работа с дизайном"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./img/third-photo.jpg"
-              alt="Работа с цветом"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-heading">Чем мы занимаемся</h2>
+          <ul class="photos list">
+            <li>
+              <img
+                src="./img/first-photo.jpg"
+                alt="Работа с кодом"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="./img/second-photo.jpg"
+                alt="Работа с дизайном"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="./img/third-photo.jpg"
+                alt="Работа с цветом"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Наша команда-->
       <section class="team-section">
-        <h2 class="section-heading">Наша команда</h2>
-        <ul class="list">
-          <li class="team-item">
-            <img
-              src="./img/teammate-1.jpg"
-              alt="Дизайнер продукта"
-              width="270"
-              height="260"
-            />
-            <h3 class="section-title">Игорь Демьяненко</h3>
-            <p class="section-content">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./img/teammate-2.jpg"
-              alt="Разработчик"
-              width="270"
-              height="260"
-            />
-            <h3 class="section-title">Ольга Репина</h3>
-            <p class="section-content">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./img/teammate-3.jpg"
-              alt="Маркетолог"
-              width="270"
-              height="260"
-            />
-            <h3 class="section-title">Николай Тарасов</h3>
-            <p class="section-content">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./img/teammate-4.jpg"
-              alt="Дизайнер интерфейса"
-              width="270"
-              height="260"
-            />
-            <h3 class="section-title">Михаил Ермаков</h3>
-            <p class="section-content">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-heading">Наша команда</h2>
+          <ul class="photos list">
+            <li class="team-item">
+              <img
+                src="./img/teammate-1.jpg"
+                alt="Дизайнер продукта"
+                width="270"
+                height="260"
+              />
+              <h3 class="section-title">Игорь Демьяненко</h3>
+              <p class="section-content">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./img/teammate-2.jpg"
+                alt="Разработчик"
+                width="270"
+                height="260"
+              />
+              <h3 class="section-title">Ольга Репина</h3>
+              <p class="section-content">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./img/teammate-3.jpg"
+                alt="Маркетолог"
+                width="270"
+                height="260"
+              />
+              <h3 class="section-title">Николай Тарасов</h3>
+              <p class="section-content">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./img/teammate-4.jpg"
+                alt="Дизайнер интерфейса"
+                width="270"
+                height="260"
+              />
+              <h3 class="section-title">Михаил Ермаков</h3>
+              <p class="section-content">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!--footer-->
     <footer class="page-footer">
       <!--logo-footer-->
-      <a href="" class="brandname" lang="en"
-        ><span class="brandname-one">Web</span
-        ><span class="brandname-two">Studio</span></a
-      >
-
-      <address>
-        <ul class="list">
-          <li>
-            <a
-              href="https://goo.gl/maps/2GUoueHVRLLiKJBr9"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="contacts-geoposition"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="contacts-link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="contacts-link"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="" class="brandname" lang="en"
+          ><span class="brandname-one">Web</span
+          ><span class="brandname-two">Studio</span></a
+        >
+        <address>
+          <ul class="list">
+            <li>
+              <a
+                href="https://goo.gl/maps/2GUoueHVRLLiKJBr9"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="contacts-geoposition"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="contacts-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="contacts-link"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
